syntax = "proto3";

package make_payment_pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/EchoSkorJjj/IS213-Education-Helper/make-payment";

message CheckoutRequest {
  string email = 1;
}

message CheckoutResponse {
  string url = 1;
}

message SuccessfulPaymentRequest {
  string raw = 1;
}

message SuccessfulPaymentResponse {
  google.protobuf.Timestamp subscribed_until = 1;
}

service MakePaymentService {
    rpc Checkout (CheckoutRequest) returns (CheckoutResponse) {}
    rpc SuccessfulPayment (SuccessfulPaymentRequest) returns (SuccessfulPaymentResponse) {}
}